Fixed Page Headers Not Showing Up

--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -980,3 +980,7 @@ input[type=password] {
     margin-top: 100px;
     min-height: 100vh;
 }
+/*----------------------------------------------------------Confessions Pages--------------------------------------------------------------------------------*/
+.page_header {
+    margin-top: 100px;
+}
